fixed weird render shift on mySongs page and added song title and artist to song Cover play pause component based on conditional.

--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,11 +1,11 @@
 .artistsContainer {
-    width: 100%;
+    width: 60%;
     min-height: 100vh;
     background-color: #f2f2f2;
-display: flex;
-flex-direction: row;
-justify-content: center;
-}
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    }
 
 .selectArtistContainer {
     width: 30%;
