--- a/frontend/src/components/MySongs/MySongs.css
+++ b/frontend/src/components/MySongs/MySongs.css
@@ -1,5 +1,5 @@
 .songItemsContainer {
-    width: 57%;
+    width: 60%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
