--- a/frontend/src/components/SongCoverPlayPause/SongCoverPlayPause.css
+++ b/frontend/src/components/SongCoverPlayPause/SongCoverPlayPause.css
@@ -27,3 +27,20 @@
     justify-content: center;
     border-radius: 50%; 
 }
+
+.songPlayPauseCoverAndTitleParentContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.songtitleSongCoverPlayPause {
+    margin-top: 10px;
+    color: white;
+}
+
+.songArtistSongCoverPlayPause {
+    margin-top: 10px;
+    color: white;
+}
