--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,14 +6,14 @@
 }
 
 body {
-  height: 100%;
+  max-height: 1117px;
   width: 100%;
   
 }
 
 #root {
   height: 100%;
-  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
